# facesearch

FaceSearch/: FaceSearch.cpp  FaceSearch.h  FaceSearch.qrc  FaceSearch.rc  FaceSearch.ui  FaceSearch.vcxproj  FaceSearch.vcxproj.filters  main.cpp  thread_pool.cpp  thread_pool.h
FaceTest/: FaceTest.vcxproj  FaceTest.vcxproj.filters  inputfilesprocessdialog.cpp  inputfilesprocessdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  resetmodelprocessdialog.cpp  resetmodelprocessdialog.h  videocapturethread.cpp
HILibFaceAPI/: .gitignore  README.md
HILibFaceAPI/include/: FaceSdk.h  HILibFaceAPI.h  SeetaWrap.h  facedetectcnn.h
HILibFaceAPI/src/: FaceSdk.cpp  HILibFaceAPI.cpp  SeetaWrap.cpp  facedetectcnn-model.cpp
QSkinContros/: QSkinContros.pri  QSkinContros.pro  QSkinContros.vcxproj  QSkinContros.vcxproj.filters  base_dialog.cpp  base_dialog.h  config.cpp  config.h  customsqlquerymodel.cpp  customsqlquerymodel.h  delay_close_dialog.cpp  delay_close_dialog.h  mylabel.cpp  mylabel.h  pagewidget 122.cpp  pagewidget 122.h  pagewidget.cpp  pagewidget.h  pagewidget.ui  qskincontros.cpp  qskincontros.h  qskincontros_global.h  ui_pagewidget.h  yh_global.cpp  yh_global.h
TestSrsRtmp/: TestSrsRtmp.vcxproj  main - 副本.cpp  main.cpp
srs_librtmp/: CMakeLists.txt  srs_librtmp.vcxproj  srs_librtmp.vcxproj.filters
srs_librtmp/include/: HILibRtmpAPI.h
srs_librtmp/src/: HILibRtmpAPI.cpp  srs_librtmp.cpp
